Correction of the app route value

--- a/Guests.html
+++ b/Guests.html
@@ -8,7 +8,7 @@
     <title>Guests Flask</title>
 </head>
 <header>
-    <p><a href="/index">Home Page</a></p>
+    <p><a href="/">Home Page</a></p>
 </header>
 <body>
     $$Adress_Book$$
